force-app/main/default/objects/Catalog_Import__c/Catalog_Import__c.object-meta.xml
<CustomObject>
    <label>Catalog Import</label>
    <nameField>
        <displayFormat>CI-{000000}</displayFormat>
        <label>Import Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Catalog Imports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>