force-app/main/default/objects/Catalog_Import__c/fields/Import_Month__c.field-meta.xml
<CustomField>
    <fullName>Import_Month__c</fullName>
    <label>Import Month</label>
    <length>7</length>
    <required>true</required>
    <type>Text</type>
</CustomField>