force-app/main/default/objects/Catalog_Import__c/fields/Imported_At__c.field-meta.xml
<CustomField>
    <fullName>Imported_At__c</fullName>
    <label>Imported At</label>
    <type>DateTime</type>
</CustomField>