force-app/main/default/objects/Catalog_Import__c/fields/Imported_By__c.field-meta.xml
<CustomField>
    <fullName>Imported_By__c</fullName>
    <label>Imported By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>