force-app/main/default/objects/Catalog_Import__c/fields/Schema__c.field-meta.xml
<CustomField>
    <fullName>Schema__c</fullName>
    <label>Schema</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pricing</fullName>
                <default>true</default>
                <label>pricing</label>
            </value>
            <value>
                <fullName>exceptions</fullName>
            </value>
            <value>
                <fullName>parent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>