force-app/main/default/objects/Catalog_Import__c/fields/Source_File__c.field-meta.xml
<CustomField>
    <fullName>Source_File__c</fullName>
    <label>Source File</label>
    <length>255</length>
    <type>Text</type>
</CustomField>