force-app/main/default/objects/Catalog_Import__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pending</fullName>
                <default>true</default>
                <label>pending</label>
            </value>
            <value>
                <fullName>processing</fullName>
            </value>
            <value>
                <fullName>done</fullName>
            </value>
            <value>
                <fullName>error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>